--- a/Contato/Contato.html
+++ b/Contato/Contato.html
@@ -1,62 +1,88 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Perfil</title>
-    <link rel="icon" href="../img/Avatar.webp">
-    <link rel="stylesheet" href="Contato.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Leonardo Freitas</title>
+    <link rel="stylesheet" href="Contato.css">
+    <link rel="icon" href="../Img/Avatar.webp">
 </head>
 
 <body>
-    <div class="container">
+    <div class="todo-conteudo">
         <header>
-            <div class="cabecalho-perfil">
-                <img src="../Img/EU.jpeg" alt="Minha Foto" class="foto-perfil" />
-                <div>
-                    <h1>Leonardo Freitas dos Santos</h1>
-                    <p class="subtitulo">Sou natural de Jaú, São Paulo, onde nasci no dia 1º de fevereiro de 2009. Em
-                        2022, mudei-me para Patrocínio, Minas Gerais. Atualmente, sou aluno do Instituto Federal do
-                        Triângulo Mineiro (IFTM), campus Patrocínio, onde curso o técnico em Informática.</p>
-                </div>
+            <div>
+                <h1>Leonardo Freitas</h1>
             </div>
+
+            <div>
+                <nav>
+                    <ul>
+                        <li><a href="#sobre-mim">Sobre Mim</a></li>
+                        <li><a href="#interesses">Interesses</a></li>
+                        <li><a href="#contato">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
+
         </header>
 
-        <div class="sobre">
-            <h2>Sobre Mim</h2>
-            <p>Sou natural de Jaú, uma cidade localizada no interior de São Paulo, onde nasci no dia 1º de fevereiro de
-                2009. Em 2022, me mudei para Patrocínio, em Minas Gerais. Atualmente, sou aluno do Instituto Federal do
-                Triângulo Mineiro (IFTM), campus Patrocínio, cursando o técnico em Informática.
+        <div class="conteudo-padrao">
 
-                Além dos estudos, tenho várias paixões que fazem parte do meu dia a dia. Adoro assistir filmes e séries,
-                o que me ajuda a relaxar e a explorar diferentes histórias e culturas. Também sou fã de videogames,
-                especialmente de jogos que estimulam a criatividade e o raciocínio. Uma das minhas atividades favoritas
-                é jogar RPG de mesa, onde posso usar a imaginação e a colaboração para criar aventuras incríveis com
-                meus amigos.
+            <h2 id="sobre-mim">Sobre Mim</h2>
 
-                Meu sonho é me tornar professor, pois acredito que a educação é uma ferramenta poderosa para transformar
-                vidas. Quero compartilhar conhecimento, inspirar outras pessoas e contribuir para um mundo melhor por
-                meio do ensino. Estou focado em aprender cada vez mais para, no futuro, exercer essa profissão com
-                dedicação e paixão.</p>
+            <div>
+                <img src="../Img/EU.jpeg" alt="">
+
+                <p>
+                    Eu nasci em Jaú (SP) no dia 01/02/2009 e hoje moro em Patrocínio (MG). Atualmente, tô fazendo o
+                    curso
+                    técnico em Informática no IFTM. Meu sonho é ser professor, porque eu acho que ensinar é uma maneira
+                    de
+                    ajudar as pessoas a crescerem e fazer a diferença na vida delas. Também sonho em passar na USP,
+                    porque
+                    sei
+                    que é uma universidade muito importante e que vai me ajudar bastante a realizar meus objetivos.
+                </p>
+            </div>
         </div>
 
-        <div class="interesses">
-            <h2>Meus Interesses</h2>
-            <ul>
-                <li>Matematica</li>
-                <li>Videogames</li>
-                <li>Filmes e Series</li>
-                <li>RPG de Mesa</li>
-            </ul>
+        <div class="conteudo-padrao">
+            <h2 id="interesses">Interesses</h2>
+            <div id="listas">
+                <ul>
+                    <li>Videogame</li>
+                    <li>Filmes e Series</li>
+                </ul>
+                <ul>
+                    <li>RPG de Mesa</li>
+                    <li>Sair com meus amigos</li>
+                </ul>
+            </div>
         </div>
 
-        <div class="contato">
-            <h2>Contato</h2>
-            <p>Email:<a href="mailto:leonardofs@estudante.iftm.edu.br" target="_blank">leonardofs@estudante.iftm.edu.br</a></p>
-            <p>GitHub:<a href="https://github.com/FreitasLeo0102" target="_blank">FreitasLeo0102</a></p>
-            <p>Instagram:<a href="https://www.instagram.com/freitasleo0102/?igsh=em9tY3ZjdXVheXIy#" target="_blank">freitasleo0102</a></p>
+        <div class="conteudo-padrao">
+
+            <h2 id="contato">Contato</h2>
+
+            <div id="img-contato">
+
+                <a href="mailto:leonardofs@estudante.iftm.edu.br" target="_blank">
+                    <img src="../Img/Email-icon.png" alt="Email" />
+                </a>
+
+                <a href="https://github.com/FreitasLeo0102" target="_blank">
+                    <img src="../Img/GitHub-icon.png" alt="GitHub" />
+                </a>
+
+                <a href="https://www.instagram.com/freitasleo0102/?igsh=em9tY3ZjdXVheXIy" target="_blank">
+                    <img src="../Img/instagram-icon.png" alt="Instagram" />
+                </a>
+
+            </div>
         </div>
+
     </div>
 </body>
 
