--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@ Autor: Pablo Miyazawa Atualizado em 27 mar 2020 -->
         mundo (um sexto delas apenas nos EUA), que renderam mais de US$ 2
         bilhões em fichas (moedas, no caso) ao final de 1982.
       </p>
-    </div>
-    <div>
+
       <img src="Img/Space.webp" alt="Imagem jogo Space Invaders">
     </div>
   </div>
@@ -69,9 +68,7 @@ Autor: Pablo Miyazawa Atualizado em 27 mar 2020 -->
 
     <div>
       <img src="Img/pacman.jpg" alt="imagem jogo pacman" />
-    </div>
 
-    <div>
       <p>
         O grande público já estava mais acostumado aos videogames na entrada da
         nova década, o que fez o sucesso de Pac-Man algo inevitável. Pela
@@ -105,9 +102,7 @@ Autor: Pablo Miyazawa Atualizado em 27 mar 2020 -->
         jogo. A disputa entre os dois principais jogadores foi retratada no
         ótimo documentário King of Kong.
       </p>
-    </div>
 
-    <div>
       <img src="Img/dk.jpg" alt="imagem jogo donkey kong">
     </div>
 
@@ -118,9 +113,7 @@ Autor: Pablo Miyazawa Atualizado em 27 mar 2020 -->
 
     <div>
       <img src="Img/mario.jpg" alt="imagem jogo super mario">
-    </div>
-
-    <div>
+    
       <p>
         Criado por Shigeru Miyamoto, Super Mario Bros. revolucionou de cara,
         obrigando o jogador a seguir sempre adiante, explorando oito mundos com
@@ -136,7 +129,7 @@ Autor: Pablo Miyazawa Atualizado em 27 mar 2020 -->
 
 
  <footer>
-  Aula para formatação de CSS. 
+  Essa pagina foi desenvolvida por:
   <a href="Contato/Contato.html" target="_blank">Leonardo Freitas dos Santos</a>
 </footer>
 
