--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jogos antigos</title>
-  <link rel="icon" href="../Img/Icon.webp">
+  <link rel="icon" href="Img/Icon.webp">
 
   <link rel="stylesheet" href="estilo.css" />
 </head>
